--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,10 @@ html {
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #ffbe0b;
+  background-color: body {
+    background: linear-gradient(to right, #4facfe, #00f2fe);
+}
+
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
