--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 html {
   font-size: 10px;
-  font-family: 'Quantico', sans-serif;
+body {
+    font-family: Comic Sans MS, cursive;
+}
+
 }
 
 h1 {
