--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,13 @@ p, li {
 }
 
 html {
-  background-color: #c2fffc;
+  background-color: #f5f5f5;
 }
 
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: body {
+  background-color: body #c2fffc;
     background: linear-gradient(to right, #4facfe, #00f2fe);
 }
 
