--- a/styles/style.css
+++ b/styles/style.css
@@ -23,14 +23,17 @@ p, li {
 }
 
 html {
-  background-color: #f5f5f5;
+    background-color: #fac5fc  /* fondo exterior */
 }
 
 body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: body #c2fffc;
+    width: 600px;
+    margin: 40px auto;
+    padding: 20px;
+    border: 5px solid black;
+    background-color: #c2fffc;  /* fondo del recuadro */
 }
+
 
   padding: 0 20px 20px 20px;
   border: 5px solid black;
