--- a/styles/style.css
+++ b/styles/style.css
@@ -23,17 +23,16 @@ p, li {
 }
 
 html {
-    background-color: #fac5fc  /* fondo exterior */
+    background-color: #d9d9d9;   /* gris exterior */
 }
 
 body {
     width: 600px;
     margin: 40px auto;
     padding: 20px;
+    background-color: #c2fffc;   /* color del recuadro */
     border: 5px solid black;
-    background-color: #c2fffc;  /* fondo del recuadro */
 }
-
 
   padding: 0 20px 20px 20px;
   border: 5px solid black;
