--- a/styles/style.css
+++ b/styles/style.css
@@ -27,15 +27,16 @@ html {
 }
 
 body {
+ body {
     width: 600px;
     margin: 40px auto;
     padding: 20px;
-    background-color: #c2fffc;   /* color del recuadro */
-    border: 5px solid black;
+    background-color: #c2fffc;
+
+    border: 8px dotted #ff66c4;
+    border-radius: 20px;
 }
 
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
 }
 
 h1 {
